syntax = "proto3";

package google.protobuf;

message DoubleValue { string text = 2; }

message StringValue { string value = 1; }
